URL textarea changed to input

--- a/assets/style.css
+++ b/assets/style.css
@@ -179,3 +179,11 @@ body {
   .slider.round::before {
     border-radius: 50%;
   }
+
+  textarea {
+    resize: none;
+  }
+  
+  /* #imageurl textarea {
+    white-space: nowrap;
+  } */
