--- a/assets/style.css
+++ b/assets/style.css
@@ -1,10 +1,3 @@
-/* Add some CSS styling here */
-body {
-  font-family: 'Roboto', 'Helvetica', Arial, sans-serif;
-  font-size: 1rem;
-  font-weight: 400;
-}
-
 .outer-wrapper {
   max-width: 800px;
   margin-top: 50px;
@@ -14,6 +7,10 @@ body {
 
 .hero {
   margin-bottom: 5px;
+}
+
+.hero h2 {
+  display: inline;
 }
 
 #intro {
@@ -31,25 +28,9 @@ body {
   margin-bottom: 15px;
 }
 
-textarea,
-input,
-select {
-  width: 100%;
-  padding: 12px 10px;
-  margin: 8px 0;
-  box-sizing: border-box;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  background-color: #fff;
-  font-family: 'Roboto', 'Helvetica', Arial, sans-serif;
-  font-size: 1rem;
-  font-weight: 400;
-}
-
-
 hr {
   margin: 0 !important;
-  
+  border-color: #e7e7e7 !important;
 }
 
 #promptOutput {
@@ -58,17 +39,6 @@ hr {
   background-color: #f1f1f1;
   padding: 20px;
   /* font-size: 1.1rem; */
-}
-
-button {
-  background-color: #3f51b5;
-  color: white;
-  padding: 10px 20px;
-  margin: 8px 0;
-  border: none;
-  cursor: pointer;
-  border-radius: 4px;
-  text-align: center;
 }
 
 button:hover {
@@ -116,35 +86,11 @@ button:hover {
   padding-bottom: 40px;
 }
 
-
-h3 {
-  margin-bottom: 0px;
-}
-
-label  {
-  display: block;
-  padding-left: 15px;
-  text-indent: -15px;
-  display: flex;
-    align-items: center;
-}
-
-input {
-  width: 15px;
-  height: 15px;
-  padding: 0;
-  margin: 0;
-  vertical-align: bottom;
-  position: relative;
-  top: -1px;
-}
-
-
-input[type=checkbox] {
+input[type="checkbox"] {
   vertical-align: middle;
   position: relative;
   margin-top: 10px;
-    margin-right: 5px;
+  margin-right: 5px;
 }
 
 .checkbox {
@@ -165,7 +111,6 @@ input[type=checkbox] {
   display: flex;
   align-items: center;
 }
-
 
 html {
   scroll-behavior: smooth;
@@ -206,18 +151,6 @@ html {
   bottom: 4px;
   background-color: white;
   transition: 0.4s;
-}
-
-input:checked + .slider {
-  background-color: #2196F3;
-}
-
-input:focus + .slider {
-  box-shadow: 0 0 1px #2196F3;
-}
-
-input:checked + .slider::before {
-  transform: translateX(26px);
 }
 
 /* Rounded sliders */
