textarea placeholder color

--- a/assets/style.css
+++ b/assets/style.css
@@ -166,6 +166,10 @@ textarea {
   resize: none;
 }
 
+textarea::placeholder, input::placeholder {
+  color: #aaaaaa;
+}
+
 
 #footer-text {
   margin-top: 20px;
